# reviewly

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
reviewly/: __init__.py  analyzer.py  config.py  github_client.py
